--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 
 <div class="bod">
-  <section class="banner" style="background-image: url(<%= @picture %>);height:50%;" > 
+  <section class="banner" style="background-image: url(<%= @picture %>);" > 
         <div class="container" >
             <div class="row">
                 <div class="col-md-5">
