--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,11 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
        
-	  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet"> 
-	  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/tooplate-style.css">
-    <link rel="stylesheet" href="/assets/css/template.css">
- 
+	   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet"> 
+	
+
+         <link rel="stylesheet" href="/assets/css/bootstrap.css">
+         
+         
+               <link rel="stylesheet" href="/assets/css/tooplate-style.css">
+               <link rel="stylesheet" href="/assets/css/table_template.css">
+  
+	 
+    
+   
   </head>
  
   <body>
