add History view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,13 +9,26 @@
                           <div style="text-align:center; color:white;" >
                              <h1 > <strong>Live Currency converter </strong></h1>
                              <h3> <strong> Convert your Money into Foreign Currencies </strong></h3>
+                           <div  class="page-direction-button">
+           
+            <a href="/History"> History </a>
+       
+        
+    </div>
                           </div>
+                          
                         </div>
+                      
+       
+                        
                     </div>
+                     
                 </div>
                 <div class="col-md-6 col-md-offset-1">
-                    <section id="first-tab-group" class="tabgroup">
+               <section id="first-tab-group" class="tabgroup">
                         <div id="tab1">
+                        
+            
                             <div class="submit-form">
                                <form method="post" action="/newConversion"  id="form-submit" >
                                    <strong><h1  style="text-align:center; " >Convert Now </h1></strong>
@@ -77,45 +90,8 @@
     </section>
 </div>
 <div>
-   <div class="col-md-8 col-md-offset-3">
-        <div  class="page-direction-button">
-            <h1 style="color:red;" > <strong> Check The History of Conversions </strong></h1>
-        </div>
-    </div>
+   
 </div>
-
-<div>
-	<table>
-      <thead>
-        <tr>
-            <th scope="col">id</th>
-            <th scope="col">Amount</th>
-            <th scope="col">From</th>
-            <th scope="col">To </th>
-			<th scope="col">Result </th>
-            <th scope="col"> Rate </th>
-			<th scope="col">Conversion Date </th>
-        </tr>
-      </thead>
-      <tbody>
-        <%if @conversions!= nil%>
-		   <% @conversions.each do |c| %>
-		     <tr> 
-                <td><strong><%= c.id %></strong></td>
-                <td><strong><%= c.Amount %></strong></td>
-                <td><strong><%= c.from %></strong> </td> 
-                <td> <strong><%= c.to %></strong></td>
-				<td> <strong><%= c.result %></strong></td>
-				<td>  <strong><%= c.rate %></strong></td>
-			 	<td> <strong><%= c.conversion_Date %></strong></td>
-             </tr>
-            <% end %>
-		<% end %>
-         
-     </tbody>
-    </table>
-</div>
-		
 		  
 
 
