--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,26 +9,13 @@
                           <div style="text-align:center; color:white;" >
                              <h1 > <strong>Live Currency converter </strong></h1>
                              <h3> <strong> Convert your Money into Foreign Currencies </strong></h3>
-                           <div  class="page-direction-button">
-           
-            <a href="/History"> History </a>
-       
-        
-    </div>
                           </div>
-                          
                         </div>
-                      
-       
-                        
                     </div>
-                     
                 </div>
                 <div class="col-md-6 col-md-offset-1">
-               <section id="first-tab-group" class="tabgroup">
+                 <section id="first-tab-group" class="tabgroup">
                         <div id="tab1">
-                        
-            
                             <div class="submit-form">
                                <form method="post" action="/newConversion"  id="form-submit" >
                                    <strong><h1  style="text-align:center; " >Convert Now </h1></strong>
@@ -66,21 +53,20 @@
                                             <button type="submit" id="form-submit" class="btn">Convert</button>
                                         </fieldset>
                                     </div>
-                                            
-                                    <div class="col-md-8 col-md-offset-2">
-                                        <fieldset>
-                                            <label class="col-md-9 col-md-offset-4" for="result">Result</label>
-                                            <input name="result" type="text"  value="<%= @result%>" class="form-control date" id="result" placeholder="REsult..." >
-                                        </fieldset>
-                                    </div>
-                                    <div class="col-md-8 col-md-offset-2 style="text-align:center;">
+                                    <div class="col-md-8 col-md-offset-2" style="text-align:center;">
                                         <%if @result!= nil%>
-                                            <p> <b> 1 </b> <%= @from %> =  <b style="font-size: 25px;"> <%= @rate %></b>  <%= @to %> </p> 
-                                            <p > <b style="font-size: 20px;"> Convertion Time : </b>  <%= @date %>  </p>  
+                                          <fieldset> 
+                                            <h1> Result : <strong  style="color:red;"> <%= @result%> </strong> <br/></h1>
+                                          </fieldset>
+                                          <p > <b  style="font-size: 20px;"> 1 </b> <%= @from %> =  <b style="font-size: 25px;"> <%= @rate %></b>  <%= @to %> </p> 
+                                          <p > <b style="font-size: 20px;"> Convertion Time : </b>  <%= @date %>  </p>  
                                         <%end%>
+                                        <div class="col-md-9 col-md-offset-1"   >
+                                          <a href="/History"> <strong> <h3 style="color:red;"> Check history </h3> </strong></a>
+                                        </div>
                                     </div>
                                  </div>
-                                </form>
+                                </form>  
                             </div>
                         </div>
                     </section>
@@ -90,7 +76,6 @@
     </section>
 </div>
 <div>
-   
 </div>
 		  
 
